--- a/index.html
+++ b/index.html
@@ -38,7 +38,6 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif}
           <p>Opencart 3/2</p>
           <p>Codeigniter</p>
           <p>Core PHP </p>
-          <br>
           <p>Magento 2 migration</p>
 
           <p class="w3-large w3-text-theme"><b><i class="fa fa-globe fa-fw w3-margin-right w3-text-teal"></i>Languages</b></p>
@@ -56,23 +55,11 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif}
     <div class="w3-twothird">
     
       <div class="w3-container w3-card w3-white w3-margin-bottom">
-        <h2 class="w3-text-grey w3-padding-16"><i class="fa fa-suitcase fa-fw w3-margin-right w3-xxlarge w3-text-teal"></i>Work Experience</h2>
+        <h2 class="w3-text-grey w3-padding-16"><i class="fa fa-hash fa-fw w3-margin-right w3-xxlarge w3-text-teal"></i>Individual</h2>
         <div class="w3-container">
-          <h5 class="w3-opacity"><b>Magento Developer / w3schools.com</b></h5>
-          <h6 class="w3-text-teal"><i class="fa fa-calendar fa-fw w3-margin-right"></i>Jan 2015 - <span class="w3-tag w3-teal w3-round">Current</span></h6>
-          <p>Lorem ipsum dolor sit amet. Praesentium magnam consectetur vel in deserunt aspernatur est reprehenderit sunt hic. Nulla tempora soluta ea et odio, unde doloremque repellendus iure, iste.</p>
+          <h5 class="w3-opacity"><b>I love open source technologies and I would like to work individually.</b></h5>
+          <p>Working on free extension.</p>
           <hr>
-        </div>
-        <div class="w3-container">
-          <h5 class="w3-opacity"><b>Web Developer / something.com</b></h5>
-          <h6 class="w3-text-teal"><i class="fa fa-calendar fa-fw w3-margin-right"></i>Mar 2012 - Dec 2014</h6>
-          <p>Consectetur adipisicing elit. Praesentium magnam consectetur vel in deserunt aspernatur est reprehenderit sunt hic. Nulla tempora soluta ea et odio, unde doloremque repellendus iure, iste.</p>
-          <hr>
-        </div>
-        <div class="w3-container">
-          <h5 class="w3-opacity"><b>Graphic Designer / designsomething.com</b></h5>
-          <h6 class="w3-text-teal"><i class="fa fa-calendar fa-fw w3-margin-right"></i>Jun 2010 - Mar 2012</h6>
-          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. </p><br>
         </div>
       </div>
 
@@ -82,7 +69,7 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif}
           <h5 class="w3-opacity"><b>M.C.A</b></h5>
           <h6 class="w3-text-teal"><i class="fa fa-calendar fa-fw w3-margin-right"></i>2018 - 2020</h6>
           <p>Master of computer application</p>
-          <img src="/assets/img/sgvu.png" height="100px"/>
+          <img src="/assets/img/sgvu.png" height="40px"/>
           <p>Suresh gyanvihar university</p>
           <hr>
         </div>
@@ -90,9 +77,9 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif}
           <h5 class="w3-opacity"><b>B.C.A</b></h5>
           <h6 class="w3-text-teal"><i class="fa fa-calendar fa-fw w3-margin-right"></i>2015 - 2018</h6>
           <p>Bechlor of computer application</p>
-          <img src="/assets/img/sutex.png" height="100px"/>
+          <img src="/assets/img/sutex.png" height="40px"/>
           <p>Sutex bank collage of computer application and science</p>
-          <img src="/assets/img/vnsgu.jpeg" height="100px"/>
+          <img src="/assets/img/vnsgu.jpg" height="40px"/>
           <p>Veer narmad south gujarat university</p>
           <hr>
         </div>
