--- a/index.html
+++ b/index.html
@@ -258,6 +258,11 @@ layout: default
             <div class="grid-block">
                 <iframe src="https://www.google.com/maps/embed/v1/place?q={{ site.author.address }}&key=AIzaSyClEWLh20lxrQBFR7omuuVESviszPxONyk" width="100%" height="100%" frameborder="0" style="border:0"></iframe>
             </div>
+            <div class="deviter"></div>
+            <h3 class="title with-icon"><span class="fa fa-inr cat-title"></span> Hourly rate</h3>
+            <div class="grid-block">
+                <span>250₹ / hours only</span>
+            </div>
         </div>
     </div>
 </div>
