--- a/index.html
+++ b/index.html
@@ -261,7 +261,7 @@ layout: default
             <div class="deviter"></div>
             <h3 class="title with-icon"><span class="fa fa-inr cat-title"></span> Hourly rate</h3>
             <div class="grid-block">
-                <span>250₹ / hours only</span>
+                <span>250₹ / hour only</span>
             </div>
         </div>
     </div>
