--- a/index.html
+++ b/index.html
@@ -262,6 +262,7 @@ layout: default
             <h3 class="title with-icon"><span class="fa fa-inr cat-title"></span> Hourly rate</h3>
             <div class="grid-block">
                 <span>250₹ / hour only</span>
+                <span>20h / week</span>
             </div>
         </div>
     </div>
