--- a/index.html
+++ b/index.html
@@ -254,9 +254,9 @@ layout: default
                 </div>
             {% endif %}
             <div class="deviter"></div>
-            <h3 class="title with-icon"><span class="fa fa-location-arrow cat-title"></span> Location</h3>
+            <h3 class="title with-icon"><span class="fa fa-location-arrow cat-title"></span> Location {{ site.author.address }}</h3>
             <div class="grid-block">
-                <iframe src="https://www.google.com/maps/embed/v1/place?q={{ site.author.address }}&key=AIzaSyClEWLh20lxrQBFR7omuuVESviszPxONyk" width="100%" height="100%" frameborder="0" style="border:0"></iframe>
+                <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d238132.67341787703!2d72.65713476175519!3d21.159440237606383!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3be04e59411d1563%3A0xfe4558290938b042!2sSurat%2C%20Gujarat!5e0!3m2!1sen!2sin!4v1710171188409!5m2!1sen!2sin" width="100%" height="100%" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
             </div>
             <div class="deviter"></div>
             <h3 class="title with-icon"><span class="fa fa-inr cat-title"></span> Hourly rate</h3>
