--- a/index.html
+++ b/index.html
@@ -259,10 +259,16 @@ layout: default
                 <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d238132.67341787703!2d72.65713476175519!3d21.159440237606383!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3be04e59411d1563%3A0xfe4558290938b042!2sSurat%2C%20Gujarat!5e0!3m2!1sen!2sin!4v1710171188409!5m2!1sen!2sin" width="100%" height="100%" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
             </div>
             <div class="deviter"></div>
+            <h3 class="title with-icon"><span class="fa fa-user cat-title"></span> About</h3>
+            <div class="grid-block">
+                <p>कर्मण्येवाधिकारस्ते मा फलेषु कदाचन । मा कर्मफलहेतुर्भूर्मा ते सङ्गोऽस्त्वकर्मणि ॥2.47॥</p>
+                <p>योगस्थ: कुरु कर्माणि सङ्गं त्यक्त्वा धनञ्जय । सिद्ध्यसिद्ध्यो: समो भूत्वा समत्वं योग उच्यते ॥2.48॥</p>
+                <p>दूरेण ह्यवरं कर्म बुद्धियोगाद्धनञ्जय । बुद्धौ शरणमन्विच्छ कृपणा: फलहेतव: ॥2.49॥</p>
+            </div>
+            <div class="deviter"></div>
             <h3 class="title with-icon"><span class="fa fa-inr cat-title"></span> Hourly rate</h3>
             <div class="grid-block">
-                <span>250₹ / hour only</span>
-                <span>20h / week</span>
+                <span>Contact hourly rate</span>
             </div>
         </div>
     </div>
