--- a/index.html
+++ b/index.html
@@ -268,7 +268,7 @@ layout: default
             <div class="deviter"></div>
             <h3 class="title with-icon"><span class="fa fa-user cat-title"></span> Look me</h3>
             <div class="grid-block">
-                <img src="assets/img/bhaveshpp.jpg" alt="bhaveshpp" />
+                <img src="assets/img/bhaveshpp.jpg" alt="bhaveshpp" style="width: -webkit-fill-available;"/>
             </div>
             <div class="deviter"></div>
             <h3 class="title with-icon"><span class="fa fa-inr cat-title"></span> Hourly rate</h3>
