--- a/index.html
+++ b/index.html
@@ -253,7 +253,7 @@ layout: default
                     </ul>
                 </div>
             {% endif %}
-            <div class="deviter"></div>
+            <!--div class="deviter"></div>
             <h3 class="title with-icon"><span class="fa fa-location-arrow cat-title"></span> Location {{ site.author.address }}</h3>
             <div class="grid-block">
                 <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d238132.67341787703!2d72.65713476175519!3d21.159440237606383!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3be04e59411d1563%3A0xfe4558290938b042!2sSurat%2C%20Gujarat!5e0!3m2!1sen!2sin!4v1710171188409!5m2!1sen!2sin" width="100%" height="100%" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
@@ -274,7 +274,7 @@ layout: default
             <h3 class="title with-icon"><span class="fa fa-inr cat-title"></span> Hourly rate</h3>
             <div class="grid-block">
                 <span>Contact hourly rate</span>
-            </div>
+        </div-->
         </div>
     </div>
 </div>
